--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -1,7 +1,16 @@
 <div class="container text">
   <p>
-  Welcome!
-</p>
+    Welcome!
+  </p>
 
-<%= link_to 'Sign Up', new_user_registration_path %>
+  <% if current_user %>
+      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+      <br>
+    <% else %>
+      <%= link_to 'Sign up', new_user_registration_path %>
+      <br>
+      <%= link_to 'Sign in', new_user_session_path %>
+      <br>
+    <% end %>
+
 </div>
