--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -1,3 +1,4 @@
+<%= render partial: "shared/navbar" %>
 <div class="container text">
   <p>
     Welcome!
@@ -14,3 +15,7 @@
     <% end %>
 
 </div>
+
+
+
+<%= render partial: "shared/footer" %>
