--- a/app/views/products/index.erb
+++ b/app/views/products/index.erb
@@ -1,9 +1,29 @@
-<p>
-  <% @products.each do |p| %>
-    <%= p.name %>
-    <%= p.price %>
-    <%= p.currency %>
-    <%= p.size.size %>
-    <br>
+<%= render partial: "shared/navbar" %>
+<div class="container">
+<div class="row">
+  <p>
+
+    <% @products.each do |p| %>
+  <div class="col-lg-4 col-md-6 mb-4">
+    <div class="card h-100">
+      <a href="#"><img class="card-img-top" src="<%= p.img_link %>"
+                       alt=""></a>
+
+      <div class="card-body">
+        <h4 class="card-title">
+          <a href="/products/<%= p.id %>"><%= p.name %></a>
+        </h4>
+        <h5>$<%= p.price %></h5>
+        </div>
+      <div class="card-footer">
+        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+      </div>
+    </div>
+  </div>
   <% end %>
 </p>
+</div>
+</div>
+
+
+<%= render partial: "shared/footer" %>
