--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">Cart</a>
+          <a class="nav-link" href="/cart">Cart</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/profile">Account</a>
